style: add basic styles

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
         <script defer type="module" src="/src/scripts/index.ts"></script>
     </head>
     <body>
-        <main>
-            <h1>T'es un glandu ?</h1>
-            <label>
-                <span>Ton prénom</span>
-                <input autofocus id="name-input" />
-            </label>
-            <button id="check-button">Vérifier mon rang de glandu</button>
-            <span id="output-span"></span>
-        </main>
+        <div id="app">
+            <main>
+                <h1>Glandu ou pas ?</h1>
+                <label>
+                    <span>Prénom</span>
+                    <input autofocus id="name-input" />
+                </label>
+                <button id="check-button">Voir la glanditude</button>
+                <span id="output-span"></span>
+            </main>
+        </div>
     </body>
 </html>
