style + content : add info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div id="app">
+            <header></header>
             <main>
                 <h1>Glandu ou pas ?</h1>
                 <label>
@@ -19,6 +20,11 @@
                 <button id="check-button">Voir la glanditude</button>
                 <span id="output-span"></span>
             </main>
+            <footer>
+                Réponses générées par un hash du nom donné, la fonction est
+                déterministe et paramétrée au hasard. Ne pas prendre les
+                résultats au premier degré.
+            </footer>
         </div>
     </body>
 </html>
